refactor - flelxb schedule